--- a/HuntTheWumpus/HuntTheWumpus.csproj
+++ b/HuntTheWumpus/HuntTheWumpus.csproj
@@ -50,7 +50,14 @@
   <PropertyGroup>
     <ApplicationIcon>wumpus.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Development|AnyCPU'">
+    <OutputPath>bin\Development\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -73,6 +80,12 @@
     <Compile Include="Answer.cs" />
     <Compile Include="Cave.cs" />
     <Compile Include="Cell.cs" />
+    <Compile Include="EditTrivia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditTrivia.Designer.cs">
+      <DependentUpon>EditTrivia.cs</DependentUpon>
+    </Compile>
     <Compile Include="GameControl.cs" />
     <Compile Include="NewGameDialog.cs">
       <SubType>Form</SubType>
@@ -105,6 +118,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource1.resx</DependentUpon>
     </Compile>
+    <Compile Include="TriviaTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TriviaTest.Designer.cs">
+      <DependentUpon>TriviaTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserInterface.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,6 +137,9 @@
     <Compile Include="Wumpus.cs" />
     <EmbeddedResource Include="AboutHuntTheWumpus.resx">
       <DependentUpon>AboutHuntTheWumpus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditTrivia.resx">
+      <DependentUpon>EditTrivia.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NewGameDialog.resx">
       <DependentUpon>NewGameDialog.cs</DependentUpon>
@@ -135,6 +157,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource1.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="TriviaTest.resx">
+      <DependentUpon>TriviaTest.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserInterface.resx">
       <DependentUpon>UserInterface.cs</DependentUpon>
     </EmbeddedResource>
@@ -146,7 +171,9 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
